fixed navbar on mobile

--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ nav .fas {
   }
 
   .nav-links {
-    position: absolute;
+    position: fixed;
     background: #423527;
     height: 100%;
     width: 200px;
